[package]
name = "bweb"
version = "0.1.0"
edition = "2024"

[features]
default = ["router"]
router = ["web-sys/History", "web-sys/Url"]
debug = []

[dependencies]
bevy_app = { version = "0.18", default-features = false, features = [
  "std",
  "web",
] }
bevy_ecs = { version = "0.18", default-features = false, features = [
  "std",
] }
bevy_platform = { version = "0.18", default-features = false, features = [
  "alloc"
] }
bevy_query_observer = { path = "../bevy_query_observer" }
bevy_utils = { version = "0.18", default-features = false, features = [
  "std",
] }
futures = { version = "0.3.31", default-features = false, features = [
  "alloc",
  "async-await",
  "std",
] }
js-sys = "0.3.78"
log = { version = "0.4", default-features = false }
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
# TODO: implement this manually
gloo-timers = { version = "0.3.0", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.85"
features = [
    "Window",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "WheelEvent",
    "HtmlHeadElement",
    "CssStyleDeclaration",
    "Document",
    "HtmlDocument",
    "Text",
    "Event",
    "FocusEvent",
    "InputEvent",
    "DomTokenList",
    "PointerEvent",
    "Location",
    "PopStateEvent",
    "KeyboardEvent",
    "SvgElement",
    "Navigator",
    "SubmitEvent",
]
