[package]
name = "bweb"
version = "0.1.0"
edition = "2024"

[features]
default = ["router"]
router = ["web-sys/History", "web-sys/Url", "web-sys/UrlSearchParams"]
reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]
debug = []

[dependencies]
bevy_app = { version = "0.18", default-features = false, features = [
  "std",
  "web",
] }
bevy_ecs = { version = "0.18", default-features = false, features = [
  "std",
] }
bevy_platform = { version = "0.18", default-features = false, features = [
  "alloc"
] }
bevy_reflect = { version = "0.18", default-features = false, optional = true }
bevy_query_observer = { version = "0.3.0", path = "../bevy_query_observer" }
bevy_utils = { version = "0.18", default-features = false, features = [
  "std",
] }
futures = { version = "0.3.31", default-features = false, features = [
  "alloc",
  "async-await",
  "std",
] }
js-sys = "0.3.78"
log = { version = "0.4", default-features = false }
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
# TODO: implement this manually
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Lockstep with the pinned wasm-bindgen (0.3.x pairs with 0.2.(x+50)).
wasm-bindgen-test = "=0.3.58"
# Extra web-sys bindings only the DOM benchmark needs (timing + DOM inspection);
# kept out of the production feature set above.
web-sys = { version = "0.3.85", features = [
    "Performance",
    "console",
    "Node",
    "NodeList",
] }

[dependencies.web-sys]
version = "0.3.85"
features = [
    "Window",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "WheelEvent",
    "HtmlHeadElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "Document",
    "HtmlDocument",
    "Text",
    "Event",
    "FocusEvent",
    "InputEvent",
    "DomTokenList",
    "PointerEvent",
    "Location",
    "PopStateEvent",
    "KeyboardEvent",
    "SvgElement",
    "Navigator",
    "SubmitEvent",
    "AddEventListenerOptions",
]
